humans-proj/src/pages/components/Header/Header.css
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display');

#header {
    width:100vw;
    height:10vh;
    border: solid hidden;
    font-family: Red Hat Display;
    font-style: normal;
    display: inline;
    overflow: hidden;
}

#hand-image {
    object-fit: contain;
    position: relative;
    float: left;
    height: 9vh;
    width: 9vh;
    margin-top: 0.5vh;
}

h1 {
    float: left;
    font-weight: bold;
    margin-left: 0.5vw;
    font-size: 40px;
    line-height: 40px;
}

/* #links-bar {
    margin-top: 3.5vh;
    vertical-align: middle;
} */
#links-bar {
    margin-top: 1.5vh;
    display: inline-flex;
}

#header-link {
    font-family: Red Hat Display;
    font-weight: lighter;
    display: inline;
    font-size: 20px;
    line-height: 24px;
    list-style-type: none;
    vertical-align: middle;
    color: white;
    text-decoration: none;
    margin-left: 2vw;
    padding: 1.2vw;
}

#feature-dropdown-menu {
    font-family: Red Hat Display;
    font-weight: lighter;
    display: inline-block;
    padding: 1.2vw;
    padding-right: 2.4vw;
    font-size: 20px;
    line-height: 24px;
    list-style-type: none;
    color: white;
    text-decoration: none;
    margin-left: 3vw;
    position: relative;
    justify-content: center;
    max-width: min-content;
}

.arrow {
    border: solid white;
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 4px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    margin-left: 0.5vw;
    margin-bottom: 0.4vh;
    vertical-align: middle;
    position: absolute;
}

#dropdown-links {
    position: absolute;
    text-decoration: none;
    font-family: Red Hat Display;
    color: white;
    font-weight: lighter;
    z-index: -1;
    text-align: center;
    padding-top: 1.5vh;
    min-width: min-content;
}

#dropdown-link {
    display: none;
    text-decoration: none;
    font-family: Red Hat Display;
    font-weight: lighter;
    color: white;
    font-size: 16px;
    line-height: 20px;
    padding-bottom: 1vh;
    z-index: -1;
}

#feature-dropdown-menu:hover{
    color: white;
    background-color: black;
    z-index: 1;
}

#feature-dropdown-menu:hover #dropdown-link {
    display: block;
    background-color: black;
    color: white;
    z-index: 1;
}

